feat:添加开始/结束串流的准备工作接口
